; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_xt_dccp.c_match_option.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_xt_dccp.c_match_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.dccp_hdr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.sk_buff*, i32, %struct.dccp_hdr*, i32*)* @match_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_option(i32 %0, %struct.sk_buff* %1, i32 %2, %struct.dccp_hdr* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.sk_buff*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.dccp_hdr*, align 8
  %10 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store %struct.sk_buff* %1, %struct.sk_buff** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.dccp_hdr* %3, %struct.dccp_hdr** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load %struct.dccp_hdr*, %struct.dccp_hdr** %9, align 8
  %15 = load i32*, i32** %10, align 8
  %16 = call i32 @dccp_find_option(i32 %11, %struct.sk_buff* %12, i32 %13, %struct.dccp_hdr* %14, i32* %15)
  ret i32 %16
}

declare dso_local i32 @dccp_find_option(i32, %struct.sk_buff*, i32, %struct.dccp_hdr*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
